Added SEO meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!doctype html>
 <html lang="hi">
 <head>
+ <meta name="title" content="Modi Ki Shooting - Funny Web Game">
+<meta name="description" content="Play Modi Ki Shooting, a fun and entertaining web game created by Abhishek. Shoot targets, score points, and enjoy the action!">
+<meta name="keywords" content="Modi game, shooting game, funny game, web game, Abhishek game, Modi Ki Shooting, browser game, HTML game">
+
+<!-- Open Graph (Facebook, WhatsApp, Instagram) -->
+<meta property="og:title" content="Modi Ki Shooting - Funny Web Game">
+<meta property="og:description" content="A fun shooting game created by Abhishek. Play now!">
+<meta property="og:image" content="https://abhishek770-design.github.io/modi-ki-shooting/modiface.jpg">
+<meta property="og:url" content="https://abhishek770-design.github.io/modi-ki-shooting/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Modi Ki Shooting - Funny Web Game">
+<meta name="twitter:description" content="Play this fun shooting game made by Abhishek.">
+<meta name="twitter:image" content="https://abhishek770-design.github.io/modi-ki-shooting/modiface.jpg">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://abhishek770-design.github.io/modi-ki-shooting/"> 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Bow & Arrow — Shoot Friend (Music Enabled)</title>
