Added SEO meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="hi">
 <head>
+<meta name="google-site-verification" content="TjHdG-wbXrYU6LKvA_tI3YwcKyYpMHPy7STYP5hVqCQ" />  
  <meta name="title" content="Modi Ki Shooting - Funny Web Game">
 <meta name="description" content="Play Modi Ki Shooting, a fun and entertaining web game created by Abhishek. Shoot targets, score points, and enjoy the action!">
 <meta name="keywords" content="Modi game, shooting game, funny game, web game, Abhishek game, Modi Ki Shooting, browser game, HTML game">
